--- a/dogity.html
+++ b/dogity.html
@@ -166,7 +166,7 @@
         </p>
         
         <p align="center">
-            <image src="i_eat_my_turds.png" alt="I'M A CERTIFIED DOGITY AND I EAT MY TURDS."/>
+            <image src="i_eat_my_turds.png"/>
         </p>
 
     </body>
