--- a/dogity.html
+++ b/dogity.html
@@ -29,19 +29,13 @@
         <!--dark mode/light mode-->
         <script>
             const btn = document.querySelector(".btn-toggle");
+            const theme = document.querySelector("#theme-link");
             btn.addEventListener("click", function() {
-            // Toggle the .dark-theme class on the body
-            document.body.classList.toggle("dark-theme");
-  
-            // Let's say the theme is equal to light
-            let theme = "light";
-            // If the body contains the .dark-theme class...
-            if (document.body.classList.contains("dark-theme")) {
-                // ...then let's make the theme dark
-                theme = "dark";
-            }
-            // Then save the choice in a cookie
-            document.cookie = "theme=" + theme;
+                if (theme.getAttribute("href") == "css/light-mode.css") {
+                    theme.href = "css/dark-mode.css";
+                } else {
+                    theme.href = "css/light-mode.css";
+                }
             });
         </script>
 
