--- a/dogity.html
+++ b/dogity.html
@@ -13,9 +13,9 @@
             dOgItY eAtS hEr TuRdS
         </title>
 
-        <link rel="stylesheet" type="text/css" href="<?php echo $themeStyleSheet; ?>" id="theme-link">
+        <link href="<?php echo $themeStyleSheet; ?>" rel="stylesheet" id="theme-link">
     </head>
-    <body class="<?php echo $themeClass; ?>">
+    <body>
         <h1 align="center">
             Does Dogity eat her turds?
         </h1>
@@ -28,14 +28,23 @@
 
         <!--dark mode/light mode-->
         <script>
+            // Select the button
             const btn = document.querySelector(".btn-toggle");
-            const theme = document.querySelector("#theme-link");
+            // Listen for a click on the button 
             btn.addEventListener("click", function() {
-                if (theme.getAttribute("href") == "css/light-mode.css") {
-                    theme.href = "css/dark-mode.css";
-                } else {
-                    theme.href = "css/light-mode.css";
-                }
+            // Toggle the .dark-theme class on the body
+            document.body.classList.toggle("dark-theme");
+  
+            // Let's say the theme is equal to light
+            let theme = "light";
+            // If the body contains the .dark-theme class...
+            if (document.body.classList.contains("dark-theme")) {
+            // ...then let's make the theme dark
+                theme = "dark";
+            }
+                
+            // Then save the choice in a cookie
+            document.cookie = "theme=" + theme;
             });
         </script>
 
