--- a/dogity.html
+++ b/dogity.html
@@ -1,10 +1,3 @@
-<?php
-    $themeStyleSheet = 'css/light-mode.css';
-    if (!empty($_COOKIE['theme']) && $_COOKIE['theme'] == 'dark') {
-        $themeStyleSheet = 'css/dark-mode.css';
-    }
-?>
-
 <!DOCTYPE html>
 
 <html>
@@ -13,7 +6,7 @@
             dOgItY eAtS hEr TuRdS
         </title>
 
-        <link href="<?php echo $themeStyleSheet; ?>" rel="stylesheet" id="theme-link">
+        <link rel="stylesheet" type="text/css" href="css/light-mode.css" id="theme-link">
     </head>
     <body>
         <h1 align="center">
@@ -28,23 +21,14 @@
 
         <!--dark mode/light mode-->
         <script>
-            // Select the button
             const btn = document.querySelector(".btn-toggle");
-            // Listen for a click on the button 
+            const theme = document.querySelector("#theme-link");
             btn.addEventListener("click", function() {
-            // Toggle the .dark-theme class on the body
-            document.body.classList.toggle("dark-theme");
-  
-            // Let's say the theme is equal to light
-            let theme = "light";
-            // If the body contains the .dark-theme class...
-            if (document.body.classList.contains("dark-theme")) {
-            // ...then let's make the theme dark
-                theme = "dark";
-            }
-                
-            // Then save the choice in a cookie
-            document.cookie = "theme=" + theme;
+                if (theme.getAttribute("href") == "css/light-mode.css") {
+                    theme.href = "css/dark-mode.css";
+                } else {
+                    theme.href = "css/light-mode.css";
+                }
             });
         </script>
 
