--- a/dogity.html
+++ b/dogity.html
@@ -47,6 +47,9 @@
                 case "KRISTEN":
                     alert("WELCOME " + name);
                     break;
+                case "ELAINA":
+                    alert("WELCOME " + name);
+                    break;
                 case "MOM":
                     alert("HI " + name);
                     break;
