--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
             dOgItY eAtS hEr TuRdS - News
         </title>
 
-        <link rel="stylesheet" href="news.css">
+        <link rel="stylesheet" href="css/news.css">
     </head>
 
     <body>
