--- a/dogity.html
+++ b/dogity.html
@@ -11,9 +11,9 @@
     <body>
         <ul>
             <li><a href="default.asp" class="active">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         
         <h1 align="center" style="margin: 50px">
