--- a/dogity.html
+++ b/dogity.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <ul>
-            <li><a href="default.asp" class="active">Home</a></li>
+            <li><a href="dogity.html" class="active">Home</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
