--- a/news.html
+++ b/news.html
@@ -10,6 +10,13 @@
     </head>
 
     <body>
+        <ul>
+            <li><a href="dogity.html" class="active">Home</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+        </ul>
+        
         <p>
             Click
                 <a href="https://en.wikipedia.org/wiki/Toilet">here.</a>
