--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
             <li><a href="about.asp">About</a></li>
         </ul>
         
-        <p>
+        <p style="margin: 50px">
             Click
                 <a href="https://en.wikipedia.org/wiki/Toilet">here.</a>
             (This is totally safe, I promise.)
