--- a/news.html
+++ b/news.html
@@ -11,8 +11,8 @@
 
     <body>
         <ul>
-            <li><a href="dogity.html" class="active">Home</a></li>
-            <li><a href="news.html">News</a></li>
+            <li><a href="dogity.html">Home</a></li>
+            <li><a href="news.html" class="active">News</a></li>
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">About</a></li>
         </ul>
