--- a/dogity.html
+++ b/dogity.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="dogity.html" class="active">Home</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://sketchywebsite.net">Contact</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
         
