--- a/dogity.html
+++ b/dogity.html
@@ -63,6 +63,9 @@
                 case "DAD":
                     alert("HI " + name);
                     break;
+                case "ASDF":
+                    alert("hello.")
+                    break;
                 default:
                     alert("BEGONE UNCULTURED SWINE.")
             }
