--- a/dogity.html
+++ b/dogity.html
@@ -167,6 +167,10 @@
         <p align="center">
             <image src="i_eat_my_turds.png"/>
         </p>
+    
+        <p>
+            <a href=index.html>Return to Home</a>
+        </p>
 
     </body>
 </html>
