--- a/clarinet1.html
+++ b/clarinet1.html
@@ -16,7 +16,7 @@
     </ul>
 
     <p>
-        <a href=index.html>Return to Home</a>
+        <a href=index.html>Return to Home;</a>
         <a href=clarinet.html>Return to Games</a>
     </p>
 </body>
