--- a/clarinet1.html
+++ b/clarinet1.html
@@ -10,10 +10,13 @@
     <!--Introduction-->
     <h1>Welcome!</h1>
 
-    <!--TOC-->
-    <ul>
-        <li><a href=clarinet1.html>2048</a></li>
-    </ul>
+    <p class="codepen" data-height="839" data-theme-id="dark" data-default-tab="result" data-user="camsong" data-slug-hash="wcKrg" style="height: 839px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="2048 game">
+        <span>See the Pen <a href="https://codepen.io/camsong/pen/wcKrg">
+        2048 game</a> by Cam Song (<a href="https://codepen.io/camsong">@camsong</a>)
+        on <a href="https://codepen.io">CodePen</a>.</span>
+    </p>
+
+    <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
     <p>
         <a href=index.html>Return to Home;</a>
