--- a/clarinet.html
+++ b/clarinet.html
@@ -14,6 +14,10 @@
     <ul>
         <li><a href=clarinet1.html>2048</a></li>
     </ul>
+    
+    <p>
+        If you have any suggestions for games, drop them in issues with the tag 'Enhancement' at https://github.com/oj4149/oj4149.github.io (REQUIRES GITHUB ACCOUNT).
+    </p>
 
     <p>
         <a href=index.html>Return to Home</a>
