--- a/clarinet.html
+++ b/clarinet.html
@@ -12,7 +12,7 @@
 
     <!--TOC-->
     <ul>
-        <li><a href=clarinet1.html>2048</a></li>
+        <li><a href=2048.htm>2048</a></li>
     </ul>
     
     <p>
