--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Introduction-->
     <h1>Welcome!</h1>
 
-    <!--TOC-->
+    <!--Table of Contents-->
     <ul>
         <li><a href=dogity.html>The Dump.</a></li>
         <li><a href=clarinet.html>:D</a></li>
