--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!--Table of Contents-->
     <ul>
         <li><a href=dogity.html>The Dump.</a></li>
-        <li><a href=clarinet.html>:D</a></li>
+        <li><a href=usseewa.html>:D</a></li>
     </ul>
 </body>
