--- a/saxophone.html
+++ b/saxophone.html
@@ -12,7 +12,7 @@
 
     <!--TOC-->
     <ul>
-        <li><a href=2048.htm>2048</a></li>
+        <li><a href=2048-master/index.html>2048</a></li>
     </ul>
     
     <p>
