--- a/saxophone.html
+++ b/saxophone.html
@@ -13,11 +13,8 @@
     <!--TOC-->
     <ul>
         <li><a href=2048-master/index.html>2048</a></li>
+        <li><a href=t-rex-runner-gh-pages/index.html>dino game!!</a></li>
     </ul>
-    
-    <p>
-        If you have any suggestions for games, drop them in issues with the tag 'Enhancement' at https://github.com/oj4149/oj4149.github.io (REQUIRES GITHUB ACCOUNT).
-    </p>
 
     <p>
         <a href=index.html>Return to Home</a>
