--- a/saxophone.html
+++ b/saxophone.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href=2048-master/index.html>2048</a></li>
         <li><a href=t-rex-runner-gh-pages/index.html>dino game!!</a></li>
+        <li><a href=floppybird-gh-pages/index.html>flappy bird!!</a></li>
     </ul>
 
     <p>
