--- a/2048-master/index.html
+++ b/2048-master/index.html
@@ -84,7 +84,7 @@
     Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <hr>
-    <p> Return to <a href="https://github.com/oj4149/oj4149.github.io/blob/master/saxophone.html">home.</a>
+    <p> Return to <a href="https://bit.ly/3j3F5Ko">home.</a>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
