--- a/saxophone.html
+++ b/saxophone.html
@@ -2,8 +2,10 @@
 
 <head>
     <title>
-        ELEPHANT
+        do elephants eat grass?
     </title>
+    
+    <link rel="shortcut icon" href="googlechrome.png">
 </head>
 
 <body>
