--- a/saxophone.html
+++ b/saxophone.html
@@ -6,6 +6,7 @@
     </title>
     
     <link rel="shortcut icon" href="googlechrome.png">
+    <link rel="stylesheet" type="text/css" href="css/light-mode.css" id="theme-link">
 </head>
 
 <body>
