--- a/saxophone.html
+++ b/saxophone.html
@@ -19,6 +19,10 @@
         <li><a href=t-rex-runner-gh-pages/index.html>dino game!!</a></li>
         <li><a href=floppybird-gh-pages/index.html>flappy bird!!</a></li>
     </ul>
+    
+    <p>
+        List of more games, hosted on GitHub: <a href="https://github.com/leereilly/games">here!</a>
+    </p>
 
     <p>
         <a href=index.html>Return to Home</a>
