--- a/index.html
+++ b/index.html
@@ -15,4 +15,8 @@
         <li><a href=dogity.html>The Dump.</a></li>
         <li><a href=saxophone.html>:D</a></li>
     </ul>
+    
+    <p>
+        View this website's GitHub page <a href="https://github.com/oj4149/oj4149.github.io">here!</a>
+    </p>
 </body>
