--- a/clarinet.html
+++ b/clarinet.html
@@ -13,4 +13,8 @@
   <a class="twitter-timeline" href="https://twitter.com/hololive_En/lists/hololive?ref_src=twsrc%5Etfw">
     A Twitter List by hololive_En
   </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  
+  <p>
+    Click <a href="index.html">here</a> to return to home!
+  </p>
 </body>
