--- a/clarinet.html
+++ b/clarinet.html
@@ -10,7 +10,7 @@
 </head>
   
 <body>
-  <a class="twitter-timeline" href="https://twitter.com/hololive_En/lists/hololive?ref_src=twsrc%5Etfw">
+  <a class="twitter-timeline" href="https://twitter.com/hololive_En/lists/hololive?ref_src=twsrc%5Etfw" style="width= 25%">
     A Twitter List by hololive_En
   </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   
