--- a/clarinet.html
+++ b/clarinet.html
@@ -14,7 +14,7 @@
     Click <a href="index.html">here</a> to return to home!
   </p>
   
-  <a class="twitter-timeline" href="https://twitter.com/hololive_En/lists/hololive?ref_src=twsrc%5Etfw" style="width= 25%">
+  <a class="twitter-timeline" href="https://twitter.com/hololive_En/lists/hololive?ref_src=twsrc%5Etfw" style="width= 400px">
     A Twitter List by hololive_En
   </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   
