--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href=dogity.html>The Dump.</a></li>
         <li><a href=saxophone.html>:D</a></li>
         <li><a href=clarinet.html>hololive</a></li>
+        <li><a href=shark.html>memes!</a></li>
     </ul>
     
     <p>
