--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <ul>
         <li><a href=dogity.html>The Dump.</a></li>
         <li><a href=saxophone.html>:D</a></li>
-        <li><a href=clarinet.html>hololive</a></li>
-        <li><a href=shark.html>memes!</a></li>
+        <li><a href=tweet.html>twitter</a></li>
     </ul>
     
     <p>
