--- a/tweet.html
+++ b/tweet.html
@@ -2,11 +2,10 @@
 
 <head>
   <title>
-    Untitled Document - Google Docs
+    Untitled document - Google Docs
   </title>
   
   <link rel="shortcut icon" href="googledocs.ico">
-  <link rel="stylesheet" type="text/css" href="css/light-mode.css" id="theme-link">
 </head>
   
 <body>
