--- a/twitter/shark.html
+++ b/twitter/shark.html
@@ -11,7 +11,7 @@
   
 <body>
   <p>
-    Click <a href="index.html">here</a> to return to home!
+    Click <a href="https://bit.ly/3tcNSOP">here</a> to return to home!
   </p>
   
   <a class="twitter-timeline" href="https://twitter.com/OldMemeArchive?ref_src=twsrc%5Etfw" data-width="400" data-height="600">
