Update and rename tweet.html to twitter/tweet.html
added to twitter folder; fixed homepage linking

--- a/twitter/tweet.html
+++ b/twitter/tweet.html
@@ -25,6 +25,6 @@
   </p>
   
   <p>
-    Return to home <a href=index.html>here</a>
+    Return to home <a href="https://bit.ly/3tcNSOP">here</a>
   </p>
 </body>
