--- a/twitter/clarinet.html
+++ b/twitter/clarinet.html
@@ -6,7 +6,7 @@
   </title>
   
   <link rel="shortcut icon" href="googlechrome.png">
-  <link rel="stylesheet" type="text/css" href="css/light-mode.css" id="theme-link">
+  <link rel="stylesheet" type="text/css" href="tweet.css" id="theme-link">
 </head>
   
 <body>
