--- a/twitter/clarinet.html
+++ b/twitter/clarinet.html
@@ -5,7 +5,7 @@
     how many days until christmas - Google Search
   </title>
   
-  <link rel="shortcut icon" href="googlechrome.png">
+  <link rel="shortcut icon" href="googlesearch.png">
   <link rel="stylesheet" type="text/css" href="tweet.css" id="theme-link">
 </head>
   
