--- a/twitter/shark.html
+++ b/twitter/shark.html
@@ -5,7 +5,7 @@
     number of countries in the world - Google Search
   </title>
   
-  <link rel="shortcut icon" href="googlechrome.png">
+  <link rel="shortcut icon" href="googlesearch.png">
   <link rel="stylesheet" type="text/css" href="tweet.css" id="theme-link">
 </head>
   
