--- a/twitter/tweet.html
+++ b/twitter/tweet.html
@@ -5,7 +5,7 @@
     Untitled document - Google Docs
   </title>
   
-  <link rel="shortcut icon" href="googledocs.ico">
+  <link rel="shortcut icon" href="googledocuments.ico">
   <link rel="stylesheet" href=tweet.css>
 </head>
   
