--- a/twitter/incorrect.html
+++ b/twitter/incorrect.html
@@ -11,7 +11,7 @@
   
 <body>
   <p>
-    Click <a href="https://bit.ly/3tcNSOP">here</a> to return to home!
+    Click <a href="tweet.html">here</a> to return to home!
   </p>
   
   <a class="twitter-timeline" href="https://twitter.com/HoloIncorrect?ref_src=twsrc%5Etfw" data-width="500" data-height="600">
