--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href=dogity.html>The Dump.</a></li>
         <li><a href=saxophone.html>:D</a></li>
-        <li><a href=twitter/tweet.html>twitter</a></li>
+        <li><a href=twitter/tweeter.html>twitter</a></li>
     </ul>
     
     <p>
