--- a/saxophone.html
+++ b/saxophone.html
@@ -16,6 +16,7 @@
     <!--TOC-->
     <ul>
         <li><a href=2048-master/index.html>2048</a></li>
+        <li><a href=2048-with-undo-master/index.html>2048 (w/undo button)</a></li>
         <li><a href=t-rex-runner-gh-pages/index.html>dino game!!</a></li>
         <li><a href=floppybird-gh-pages/index.html>flappy bird!!</a></li>
     </ul>
