--- a/saxophone.html
+++ b/saxophone.html
@@ -17,7 +17,7 @@
     <ul>
         <li><a href=2048-master/index.html>2048</a></li>
         <li><a href=2048-with-undo-master/index.html>2048 (w/undo button)</a></li>
-        <li><a href=c4-master>connect four!!</a></li>
+        <li><a href=c4-master/browser/src/index.html>connect four!!</a></li>
         <li><a href=t-rex-runner-gh-pages/index.html>dino game!!</a></li>
         <li><a href=floppybird-gh-pages/index.html>flappy bird!!</a></li>
     </ul>
