--- a/sogity.html
+++ b/sogity.html
@@ -76,6 +76,8 @@
                 document.write(i + "<br />");
             }
         </script>
+        
+        <a href="english book report/the_perks_of_being_a_wallflower.html">beep boop test test</a>
 
         <!--toilet pic-->
         <p>
