--- a/english book report/the_perks_of_being_a_wallflower.html
+++ b/english book report/the_perks_of_being_a_wallflower.html
@@ -193,6 +193,17 @@
                 </p>
 
             </p>
+            <hr>
+
+            <p style="font-size:30px;">
+                <b>Alternate book covers I made:</b> <br> <br>
+
+                <img src="tpobaw_cover1 copy.jpg" style="width:200px;height:320px;">        
+                <img src="tpobaw_cover2 copy.png" style="width:200px;height:320px;">
+                <img src="tpobaw_cover3 copy.png" style="width:200px;height:320px;">
+                <img src="tpobaw_cover4 copy.png" style="width:200px;height:320px;">
+                <img src="tpobaw_cover5 copy.png" style="width:200px;height:320px;">
+            </p>
 
     </body>
 </html>
