--- a/english book report/the_perks_of_being_a_wallflower.html
+++ b/english book report/the_perks_of_being_a_wallflower.html
@@ -22,10 +22,14 @@
                 <!--Star rating (5/5)-->
                 &#9733; &#9733; &#9733; &#9733; &#9733; <br> 
             </p>
-
-            <!--summary and explanation of rating-->
+        
             <p style="padding-left:225px; font-size:20px;">
-                *insert summary here*
+                <i>The Perks of Being a Wallflower</i> is an extremely relatable book. It follows Charlie in his first year of high school via a series of letters to an unnamed 
+                recipient. Charlie is, well, a wallflower. He's very good at listening and doing what's expected, but he doesn't really "participate in life" (Chbosky 24). 
+                Charlie's whole life flips though, when he meets a pair of seniors: Patrick and Sam. Because of hanging out with them, Charlie matures, in ways good and bad. He
+                learns to start taking charge and be more socialable (he's still quite the introvert though). In addition, Charlie also has to navigate tricky relationships, from 
+                his sister's abusive boyfriend, to Charlie's own girl troubles. This book is five out of five stars because it comments on many difficult high school issues that
+                high schoolers face, still relevant even 20 years later. 
             </p>
 
             <p style="padding-left:225px; font-size:20px;">
@@ -196,7 +200,7 @@
             <hr>
 
             <p style="font-size:30px;">
-                <b>Alternate book covers I made:</b> <br> <br>
+                <b>Book Covers:</b> <br> <br>
 
                 <img src="tpobaw_cover1 copy.jpg" style="width:200px;height:320px;">        
                 <img src="tpobaw_cover2 copy.png" style="width:200px;height:320px;">
